revises z-index bugs and re-pads the timeline

--- a/slate.css
+++ b/slate.css
@@ -126,12 +126,12 @@ a:hover {
 	#top_bar a span,
 	#top_login a span {
 	
-		color: rgba(0, 0, 0, .55) !important;
+		color: rgba(0, 0, 0, .45) !important;
 		font-weight: bold !important;
 		font-size: 13px !important;
 		background: none !important;
 		
-		text-shadow: 0px 1px 0px white;
+		text-shadow: 0px 1px 0px rgba(255, 255, 255, .5);
 	
 	}
 	
@@ -158,6 +158,8 @@ a:hover {
 .plurk_cnt {
 
 	z-index: 512;
+	
+	-webkit-user-select: text;
 
 }
 
@@ -273,7 +275,7 @@ a:hover {
 		min-width: 360px !important;
 		max-width: 360px !important;
 		
-		z-index: 16384;
+		z-index: 2048;
 			
 	}
 	
@@ -524,11 +526,13 @@ a:hover {
 /* @group Timeline */
 
 	#timeline_holder  {
+	
+		-webkit-user-select: none;
 
 		margin-top: -9px;
-		padding-top: 54px !important;
+		padding-top: 63px !important;
 		
-		padding-bottom: 36px !important;
+		padding-bottom: 72px !important;
 		margin-bottom: 36px !important;
 		background: none;
 		background-color: rgba(0, 0, 0, .125);
@@ -721,7 +725,7 @@ a:hover {
 	
 	text-align: center !important;
 	margin-left: -216px;
-	margin-top: 45px;
+	margin-top: 72px;
 	padding: 9px 18px;
 	border:  1px solid rgba(0, 0, 0, .125);
 	background: rgba(180, 180, 180, .85);
@@ -732,7 +736,7 @@ a:hover {
 	-moz-box-shadow: 0px 0px 4.5px rgba(0, 0, 0, .25);
 	box-shadow: 0px 0px 4.5px rgba(0, 0, 0, .25);
 	
-	z-index: 8192;
+	z-index: 512;
 
 }
 
@@ -749,9 +753,9 @@ a:hover {
 	#updater, #updater a, #updater a span, #updater a span b {
 
 		font-size: inherit !important;
-		color: rgba(0, 0, 0, .5) !important;	
+		color: rgba(0, 0, 0, .65) !important;	
 		font-weight: bold !important;
-		text-shadow: 0px 1px 0px rgba(255, 255, 255, .75);
+		text-shadow: 0px 1px 0px rgba(255, 255, 255, .55);
 		
 	}
 	
@@ -872,6 +876,8 @@ a:hover {
 	
 		min-width: 732px;
 		margin: 0 auto;
+		
+		-webkit-user-select: none;
 	
 	}
 	
@@ -1402,6 +1408,8 @@ a:hover {
 		border: none !important;
 		
 		-webkit-box-shadow: 0px 0px 2px black;
+		
+					z-index: 4096;
 
 	}
 	
@@ -1438,8 +1446,6 @@ a:hover {
 		
 			outline: 6px solid yellow;
 			opacity: 1;
-			
-			z-index: 1024;
 	
 		}
 		
@@ -1716,7 +1722,7 @@ textarea {
 
 
 
-/* @group Preference Sheets */
+/* @group Preference Sheets & Overlays */
 
 .GB_Window,
 .GB_Window .header,
@@ -1739,6 +1745,8 @@ textarea {
 		-moz-border-radius: 4.5px;
 		-webkit-border-radius: 4.5px;
 		border-radius: 4.5px;
+		
+		z-index:  2048;
 
 	}
 	
